--- a/.github/ISSUE_TEMPLATE/CI.yml
+++ b/.github/ISSUE_TEMPLATE/CI.yml
@@ -1,16 +1,13 @@
+name: CI - Build & Test
 
-name: CI - Build, Test
-
-# This will trigger the workflow on pull requests and merge to the integration branch
 on:
   pull_request:
-    branches: [ "integration" ]
+    branches: [integration]
     types: [opened, reopened, synchronize]
   workflow_dispatch:
-  
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -18,25 +15,25 @@ jobs:
         node-version: [20.x, 22.x]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    
-    - name: Install dependencies
-      run: npm ci
-    
-    # Commented out steps because of missing scripts in package.json and lint errors
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-    #- name: Run lint
-    #  run: npm run lint
-    
-    #- name: Build
-    #  run: npm run build
+      - name: Install dependencies
+        run: npm ci
+      
+      # Commented out steps because of missing scripts in package.json and lint errors
 
-    #- name: Run tests
-    #  run: npm test
+      #- name: Run lint
+      #  run: npm run lint
+
+      #- name: Build
+      #  run: npm run build
+
+      #- name: Run tests
+      #  run: npm test
