chore(ci): change workflow trigger for testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@
 name: CI - Build & Test
 
 on:
+  push:
+    branches: [feature/test-reports]
   pull_request:
     branches: [integration]
     types: [opened, reopened, synchronize]
