--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Test Report
+      - name: Generate report
         uses: dorny/test-reporter@v2
         if: ${{ !cancelled()}}
         with:
